--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORTFOLIO_D48A0 }}'
           channelId: live
           projectId: portfolio-d48a0
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
